fix: исправить все замечания ревьюера